// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LazyReducer 1`] = `
<div>
  <div>
    DelayContainer 
    {"store":{"a":"a","b":"x"}}
  </div>
</div>
`;

exports[`LazyReducer 2`] = `
<div>
  <div>
    InnerComponent 
    {"x":"xxx","store":{"a":"a","b":"x","nameX":null}}
  </div>
</div>
`;

exports[`LazyReducer 3`] = `
<div>
  <div>
    InnerComponent 
    {"x":"xxx","store":{"a":"a","b":"x","nameX":null,"reducerWithFun":"reducerWithFun"}}
  </div>
  <div>
    DelayContainerWithFunc 
    {"store":{"a":"a","b":"x","nameX":null,"reducerWithFun":"reducerWithFun"}}
  </div>
</div>
`;
